<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.AddDosageFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/empty_divider_12"
            android:orientation="vertical"
            android:paddingVertical="12dp"
            android:showDividers="middle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:background="@drawable/rounded_background_card"
                android:backgroundTint="@color/black"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginVertical="8dp"
                    android:text="@string/name_title_add"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nameInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/input_rounded_background"
                    app:errorIconDrawable="@drawable/baseline_error_24"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nameInput"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/input_height"
                        android:background="@android:color/transparent"
                        android:hint="@string/name_hint"
                        android:inputType="text"
                        android:textSize="@dimen/input_text_size" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:background="@drawable/rounded_background_card"
                android:backgroundTint="@color/black"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtConcentration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginVertical="8dp"
                    android:text="@string/concentration_title_add"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/concentrationInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/input_rounded_background"
                    app:errorIconDrawable="@drawable/baseline_error_24"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/concentrationInput"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/input_height"
                        android:background="@android:color/transparent"
                        android:hint="@string/concentration_hint"
                        android:inputType="number"
                        android:textSize="@dimen/input_text_size" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:background="@drawable/rounded_background_card"
                android:backgroundTint="@color/black"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtIngredient"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginVertical="8dp"
                    android:text="@string/ingredient_title_add"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ingredientInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/input_rounded_background"
                    app:errorIconDrawable="@drawable/baseline_error_24"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ingredientInput"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/input_height"
                        android:background="@android:color/transparent"
                        android:hint="@string/ingredient_hint"
                        android:inputType="number"
                        android:textSize="@dimen/input_text_size" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:background="@drawable/rounded_background_card"
                android:backgroundTint="@color/black"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtMethod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginVertical="8dp"
                    android:text="@string/method_title_add"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/methodBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/rounded_background_card"
                    android:enabled="true"
                    android:paddingHorizontal="12dp"
                    android:text="@string/add_method_btn"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_text_size"
                    android:textStyle="bold"
                    app:backgroundTint="@color/white" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/containerMethod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:nestedScrollingEnabled="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/methodBtn" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:background="@drawable/rounded_background_card"
                android:backgroundTint="@color/black"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginVertical="8dp"
                    android:text="@string/number_of_doses_title_add"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/numberInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/input_rounded_background"
                    app:errorIconDrawable="@drawable/baseline_error_24"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/numberInput"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/input_height"
                        android:background="@android:color/transparent"
                        android:hint="@string/number_of_doses_hint"
                        android:inputType="number"
                        android:textSize="@dimen/input_text_size" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:background="@drawable/rounded_background_card"
                android:backgroundTint="@color/black"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtInterval"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginVertical="8dp"
                    android:text="@string/interval_title_add"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/intervalInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/input_rounded_background"
                    app:errorIconDrawable="@drawable/baseline_error_24"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/intervalInput"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/input_height"
                        android:background="@android:color/transparent"
                        android:hint="@string/interval_hint"
                        android:inputType="number"
                        android:textSize="@dimen/input_text_size" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:background="@drawable/rounded_background_card"
                android:backgroundTint="@color/black"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtWithdrawal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginVertical="8dp"
                    android:text="@string/withdrawal_title_add"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/withdrawalInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/input_rounded_background"
                    app:errorIconDrawable="@drawable/baseline_error_24"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/withdrawalInput"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/input_height"
                        android:background="@android:color/transparent"
                        android:hint="@string/withdrawal_hint"
                        android:inputType="number"
                        android:textSize="@dimen/input_text_size" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>